# controllers/Users.js
@@ -1,0 +1,54 @@
+'use strict';
+
+var utils = require('../utils/writer.js');
+var Users = require('../service/UsersService');
+
+module.exports.createUser = function createUser (req, res, next, body) {
+  Users.createUser(body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.deleteUser = function deleteUser (req, res, next, userId) {
+  Users.deleteUser(userId)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.findUsers = function findUsers (req, res, next, conditions, limit) {
+  Users.findUsers(conditions, limit)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getUser = function getUser (req, res, next, userId) {
+  Users.getUser(userId)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.updateUser = function updateUser (req, res, next, body, userId) {
+  Users.updateUser(body, userId)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
